<resources>
    <string name="app_name">Finances</string>
    <string name="logout">LOGOUT</string>
    <string name="email_address">Email Address:</string>
    <string name="age">Age:</string>
    <string name="full_name">Full Name:</string>
    <string name="finance">Finance</string>
    <string name="control_your_finances">Control your finances</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="categories">
        <item>Food</item>
        <item>Utilities</item>
        <item>Rent</item>
        <item>Leisure</item>
        <item>No category</item>
    </string-array>
    <string-array name="sort">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>